--- a/templates/base.html
+++ b/templates/base.html
@@ -9,29 +9,83 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css">
-    <link rel="stylesheet" href="{% static 'css/main.css' %}">
+    <link href="/static/css/main.css" rel="stylesheet">
     <title>{% block title_block %}My e-Commerce Shop {% endblock %}</title>
+
+  <style>
+      .card {
+          height: 300px;
+      }
+      .card-product:after {
+          content: "";
+          display: table;
+          clear: both;
+          visibility: hidden;
+      }
+      .card-product .price-new, .card-product .price {
+          margin-right: 5px;
+      }
+      .card-product .price-old {
+          color: #999;
+      }
+      .card-product .img-wrap {
+          border-radius: 3px 3px 0 0;
+          overflow: hidden;
+          position: relative;
+          height: 220px;
+          text-align: center;
+      }
+      .card-product .img-wrap img {
+          max-width: 100%;
+          max-height: 100%;
+          object-fit: cover;
+      }
+      .card-product .info-wrap {
+          overflow: hidden;
+          padding: 15px;
+          border-top: 1px solid #eee;
+      }
+      .card-product .action-wrap {
+          padding-top: 4px;
+          margin-top: 4px;
+      }
+      .card-product .bottom-wrap {
+          padding: 15px;
+          border-top: 1px solid #eee;
+      }
+      .card-product .title {
+          margin-top: 0px;
+      }
+
+  </style>
+
   </head>
 
 <body>
 
+    {% include 'navbar.html' %}
+
     <div class="container" style="padding-top: 20px">
 
-        <div class="messages container mt-2"
+        <div class="messages container mt-2">
 
              {% if messages %}
 
                  {% for message in messages %}
 
                     <div {% if message.tags %} class="alert alert-{{ message.tags }} {% endif %}" role="alert">
-
                         {{ message }}
+                        <button type="button" class="close" data-dismiss="alert" aria-level="close">
+                            <span aria-hidden="true"> &times;</span>
+                        </button>
 
                     </div>
 
                  {% endfor %}
 
              {% endif %}
+
+        </div>
 
         {% block body_block %}
 
